--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         
 
         <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="y/modernizr/modernizr.js"></script>
+        <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
 
     </head>
@@ -27,7 +27,7 @@
     <body>
 
         <!-- build:js scripts/main.js -->
-        <script data-main="scripts/init" src="y/requirejs/require.js"></script>
+        <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
 
         <script>document.write('<script src="http://'
