--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" id="vp" content="user-scalable=yes, width=device-width, initial-scale=1.0, maximum-scale=1.5, minimum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <!-- build:css css/ptsd.css -->
     <link rel="stylesheet" href="css/ptsd.css" />
     <!-- endbuild -->
