--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,16 +1,9 @@
-<div class="layer title">
-    <h1>ptsd</h1>
-</div>
-
-<div class="layer menu-container">
-    <button class="btn menu-toggle pull-left">
-        <i class="icon icon-menu"></i>
-        menu
-    </button>
-    <ul class="menu">
-        <li><a href="#">ptsd</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="../launchpad"><i class="icon icon-launchpad"></i>Launchpad</a></li>
-    </ul>
-    <div class="menu-overlay"></div>
+<img class="user-pic" alt="User Profile Picture" />
+<div class="user-options">
+	<h1>Joseph Hillhouse</h1>
+	<div class="filters">
+		<button id="new-post"><span class="btn-icon"></span>New Post</button>
+		<button id="ask-doctor"><span class="btn-icon"></span>Ask a Doctor</button>
+		<button id="comments"><span class="btn-icon"></span>Comments</button>
+	</div>
 </div>
