--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,7 @@
   <script data-main="js/config" src="lib/requirejs/require.js" type="text/javascript"></script>
   <!-- endbuild -->
 
-  <div class="container-full">
-    <header class="header-fixed"></header>
-    <div id="content"></div>
-    <footer class="footer-fixed"></footer>
+  <div id="container">
   </div>
 
   </body>
