got basis of feed view working

--- a/app/html/post.html
+++ b/app/html/post.html
@@ -2,6 +2,6 @@
 <h2>Title</h2>
 <h3>Username</h3>
 <div class="emoticon">:)</div>
-<p>Some text for a post</p>
+<p><%- text %></p>
 <button id="add-favorite-id"><span class="btn-icon"></span>Favorite</button>
 <button id="add-comment-id"><span class="btn-icon"></button>Add Comment</button>
