--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,9 +1,11 @@
-<img class="user-pic" alt="User Profile Picture" />
+<div class="user-pic">
+	<img alt="User Profile Picture" />
+</div>
 <div class="user-options">
 	<h1>Joseph Hillhouse</h1>
 	<div class="filters">
-		<button id="new-post"><span class="btn-icon"></span>New Post</button>
-		<button id="ask-doctor"><span class="btn-icon"></span>Ask a Doctor</button>
-		<button id="comments"><span class="btn-icon"></span>Comments</button>
+		<button id="new-post"><span class="btn-icon new-post"></span>New Post</button>
+		<button id="ask-doctor"><span class="btn-icon fa fa-user-md"></span>Ask a Doctor</button>
+		<button id="comments"><span class="btn-icon fa fa-comment"></span>Comments</button>
 	</div>
 </div>
