--- a/app/html/main.html
+++ b/app/html/main.html
@@ -1,5 +1,5 @@
 <div id="main">
-  <button id="menu-btn"><span class="btn-icon">=</span>Menu</button>
+  <button id="menu-btn" class="menu-btn icon-only"><span class="btn-icon fa fa-bars"></span><span class="vo-only">Menu</span></button>
   <div id="menu"></div>
   <div id="content">
     <div class="header"></div>
