--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
   <script data-main="js/config" src="lib/requirejs/require.js" type="text/javascript"></script>
   <!-- endbuild -->
 
-  <div id="container">
+  <div class="container" id="container">
   </div>
 
   </body>
