--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,8 @@
   <script data-main="js/config" src="lib/requirejs/require.js" type="text/javascript"></script>
   <!-- endbuild -->
 
-  <div id="container">
-  </div>
+  <div id="menu"></div>
+  <div id="container"></div>
 
   </body>
 </html>
