Pretty login page

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <!-- endbuild -->
 
   <div id="menu"></div>
-  <div class="container" id="container"></div>
+  <div id="container"></div>
 
   </body>
 </html>
