--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,7 +1,6 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <a id="login-button" href="#">Login</a>
-        </div>
-    </div>
+<div class="login-page">
+    <h1 class="background-gradient">PTSD Team Share</h1>
+    <h2>Digital Group Therapy</h2>
+    <p>Share experiences, advice, and successes with other Veterans who have suffered or are suffering from PTSD</p>
+    <button id="login-button" class="login-btn"><span class="btn-icon fa fa-arrow-right"></span>Login</button>
 </div>
