--- a/app/html/post.html
+++ b/app/html/post.html
@@ -1,7 +1,6 @@
-<img class="user-pic" alt="User Profile Picture" />
+<div class="col-xs-2"><img class="user-pic" alt="User Profile Picture" /></div><div class="col-xs-10"><h3><%- author %></h3></div>
 <h2><%- title %></h2>
-<h3><%- author %></h3>
-<div class="emoticon">Mood Rating: <%- mood %></div>
+<div>Mood Rating: <%- mood %> <span class="emoticon angry"></span></div>
 <p><%= message %></p>
 <button id="add-favorite-id"><span class="btn-icon"></span>Favorite</button>
 <button id="add-comment-id"><span class="btn-icon"></button>Add Comment</button>
