--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,8 @@
   <script data-main="js/config" src="lib/requirejs/require.js" type="text/javascript"></script>
   <!-- endbuild -->
 
-  <div id="menu"></div>
-  <div class="container" id="container"></div>
+  <div id="menu" class="nav-wrapper"></div>
+  <div id="container" class="container container-wrapper"></div>
 
   </body>
 </html>
