--- a/app/html/newPost.html
+++ b/app/html/newPost.html
@@ -4,18 +4,33 @@
     <input data-attr="title" type="text" class="form-control" id="post-title" placeholder="Enter Post Title">
   </div>
   <div class="form-group">
-	<fieldset>
-		<legend>How do you feel?</legend>
-		<label for="happy"><input data-attr="mood" name="mood" type="radio" id="happy" value="1" checked /> Happy</label>
-		<label for="sad"><input data-attr="mood" name="mood"  type="radio" id="sad" value="2" /> Sad</label>
-		<label for="angry"><input data-attr="mood" name="mood"  type="radio" id="angry" value="3" /> Angry</label>
-		<label for="indifferent"><input data-attr="mood" name="mood" type="radio" id="indifferent" value="4" /> Indifferent</label>
-		<label for="anxious"><input data-attr="mood" name="mood"  type="radio" id="anxious" value="5" /> Anxious</label>
-	</fieldset>
+	<label>How do you feel?</label><br />
+	<div class="moods">
+		<label for="happy" class="active">
+			<input data-attr="mood" name="mood" class="mood" type="radio" id="happy" value="1" checked="checked" /> 
+			<span class="emoticon happy"></span>
+		</label>
+		<label for="sad">
+			<input data-attr="mood" name="mood" class="mood" type="radio" id="sad" value="2" /> 
+			<span class="emoticon sad"></span>
+		</label>
+		<label for="angry">
+			<input data-attr="mood" name="mood" class="mood" type="radio" id="angry" value="3" /> 
+			<span class="emoticon angry"></span>
+		</label>
+		<label for="indifferent">
+			<input data-attr="mood" name="mood" class="mood" type="radio" id="indifferent" value="4" /> 
+			<span class="emoticon indifferent"></span>
+		</label>
+		<label for="anxious">
+			<input data-attr="mood" name="mood" class="mood" type="radio" id="anxious" value="5" /> 
+			<span class="emoticon anxious"></span>
+		</label>
+	</div>
   </div>
   <div class="form-group">
     <label for="post-body">Post Body</label>
-    <textarea data-attr="message" type="password" class="form-control" id="post-body" placeholder="Enter Post Body"></textarea>
+    <textarea rows="6" data-attr="message" type="password" class="form-control" id="post-body" placeholder="Enter Post Body"></textarea>
   </div>
   <% if (type === 'ask-a-doctor') { %>
   <div class="form-group">
