--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,32 +1,40 @@
 <div class="login-page">
-    <h1 class="background-gradient">PTSD Team Share</h1>
-    <h2>Digital Group Therapy</h2>
-    <p>
-        Share experiences, advice, and successes with other Veterans who have suffered or are suffering from PTSD
-    </p>
-
-    <div class="loginContainer col-lg-6 col-lg-offset-3">
-        <div class="row>">
-            <div class="col-lg-8">
-                <form>
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username"
-                        placeholder="Username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                    <button id="login-button" class="login-btn">
-                        <span class="btn-icon fa fa-arrow-right"></span>Login
-                    </button>
-                </form>
+    <div class="col-lg-6 col-lg-offset-3">
+        <div class="loginContainer clearfix">
+            <div class="title col-lg-8">
+                <h1>Log in to myPTSD</h1>
+                <p>
+                    Share experiences, advice, and successes with other Veterans who have suffered or are suffering from PTSD
+                </p>
             </div>
-            <div class="col-lg-4">
-                Right column
+            <div class="row>">
+                <div class="col-lg-8">
+                    <form>
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="username"
+                            placeholder="Username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password">
+                        </div>
+                        <button id="login-button" class="login-btn btn btn-primary">
+                            Log In
+                        </button>
+                    </form>
+                </div>
+                <div class="col-lg-4 rightCol">
+                    <div class="question">
+                        <h4>Are you a provider?</h4>
+                        <a href="#">Click here to login</a>
+                    </div>
+                    <div class="needhelp">
+                        <h4>Having trouble logging in?</h4>
+                        <a href="#">Click here for help</a>
+                    </div>
+                </div>
             </div>
         </div>
-        
     </div>
 </div>
