--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,11 +1,18 @@
 <div class="user-pic">
-	<img alt="User Profile Picture" />
+	<img alt="User Profile Picture" width="50" src="assets/blank-avatar.png" />
 </div>
 <div class="user-options">
-	<h1>Joseph Hillhouse</h1>
-	<div class="filters">
-		<button id="new-post"><span class="btn-icon new-post"></span>New Post</button>
+    <div class="row">
+       <h1 class="col-lg-9">Joseph Hillhouse</h1>
+       <button id="new-post" class="col-lg-3 btn btn-primary"><span class="btn-icon new-post"></span>New Post</button>
+    </div>
+	
+	<div class="row filters">
+		<button id="new-post">234 Followers</button>
 		<button id="ask-doctor"><span class="btn-icon fa fa-user-md"></span>Ask a Doctor</button>
-		<button id="comments"><span class="btn-icon fa fa-comment"></span>Comments</button>
+		<button id="comments">
+		    <span class="comment-number">2</span>
+		    <span class="btn-icon fa fa-comment"></span>Comments
+		</button>
 	</div>
 </div>
