modifying moods and feed wall

--- a/app/html/newPost.html
+++ b/app/html/newPost.html
@@ -8,23 +8,23 @@
 	<div class="moods">
 		<label for="happy" class="active">
 			<input data-attr="mood" name="mood" class="mood" type="radio" id="happy" value="1" checked="checked" /> 
-			<span class="emoticon happy"></span>
+			<span class="emoticon mood-1"></span>
 		</label>
 		<label for="sad">
 			<input data-attr="mood" name="mood" class="mood" type="radio" id="sad" value="2" /> 
-			<span class="emoticon sad"></span>
+			<span class="emoticon mood-2"></span>
 		</label>
 		<label for="angry">
 			<input data-attr="mood" name="mood" class="mood" type="radio" id="angry" value="3" /> 
-			<span class="emoticon angry"></span>
+			<span class="emoticon mood-3"></span>
 		</label>
 		<label for="indifferent">
 			<input data-attr="mood" name="mood" class="mood" type="radio" id="indifferent" value="4" /> 
-			<span class="emoticon indifferent"></span>
+			<span class="emoticon mood-4"></span>
 		</label>
 		<label for="anxious">
 			<input data-attr="mood" name="mood" class="mood" type="radio" id="anxious" value="5" /> 
-			<span class="emoticon anxious"></span>
+			<span class="emoticon mood-5"></span>
 		</label>
 	</div>
   </div>
