--- a/app/html/post.html
+++ b/app/html/post.html
@@ -6,7 +6,7 @@
     </div>
     <h2><%- title %></h2>
     <div>
-        Mood Rating: <%- mood %> <span class="emoticon angry"></span>
+        Mood <span class="emoticon mood-<%- mood %>"></span>
     </div>
     <div class="message">
         <% if(message.length > 800) {%><%= message.substr(0,800) %>... 
