Changed the z-index

--- a/app/html/navMenu.html
+++ b/app/html/navMenu.html
@@ -1,4 +1,4 @@
-<button id="open-menu-btn" class="menu-btn icon-only"><span class="btn-icon fa fa-bars"></span><span class="vo-only">Menu</span></button>
+<button id="open-menu-btn" class="menu-btn icon-only"><span class="fa fa-bars"></span><span class="vo-only">Menu</span></button>
 <div class="text-center search-wrapper">
 	<button id="close-menu-btn" class="fa fa-close"><span class="vo-only">Close</span></button>
 	<label for="search"><span class="vo-only">Search</span></label>
