--- a/app/html/navMenu.html
+++ b/app/html/navMenu.html
@@ -11,8 +11,8 @@
 </div>	
 	
 <ul class="nav-menu-items">
-	<li><a href="#">Feed Wall</a></li>
-	<li><a href="#">Favorites</a></li>
-	<li><a href="#">Profile</a></li>
-	<li><a href="#">Settings</a></li>
+	<li><a href="#">Feed Wall<span class="fa fa-globe pull-right"></span></a></li>
+	<li><a href="#">Favorites<span class="fa fa-star pull-right"></span></a></li>
+	<li><a href="#">Profile<span class="fa fa-user pull-right"></span></a></li>
+	<li><a href="#">Settings<span class="fa fa-gear pull-right"></span></a></li>
 </ul>
