--- a/app/html/main.html
+++ b/app/html/main.html
@@ -6,8 +6,8 @@
             <div class="link-container">
                 <div class="link col-lg-12">   
                     <article>
+                        <h3>Ask a Doctor</h3>
                         <div class="fa fa-question"></div>
-                        <h3>Ask a Doctor?</h3>
                     </article>
                     <footer class="row">
                         <span>You have (3) outstanding answers</span>
