--- a/app/html/commentsSection.html
+++ b/app/html/commentsSection.html
@@ -1,6 +1,6 @@
 <div class="add-comment-section">
-	<label for="new-comment">Add Comment</label>
-	<textarea id="new-comment" />
+	<label for="new-comment" class="vo-only" >Add Comment</label>
+	<textarea id="new-comment" class="form-control" placeholder="Add Comment" />
 	<button class="btn-primary" id="new-comment-btn">Submit</button>
 </div>
 <div class="comments-list"></div>
