--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,10 @@
     <!-- build:css css/ptsd.css -->
     <link rel="stylesheet" href="css/ptsd.css" />
     <!-- endbuild -->
+    
+    <!-- disables zoom for mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
     <link rel="apple-touch-icon" href="" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- build:js lib/modernizr/modernizr.js -->
