--- a/app/html/commentsSection.html
+++ b/app/html/commentsSection.html
@@ -1,6 +1,8 @@
+<h3>Comments</h3>
+<div class="comments-list">
+</div>
 <div class="add-comment-section">
 	<label for="new-comment" class="vo-only" >Add Comment</label>
 	<textarea id="new-comment" class="form-control" placeholder="Add Comment" />
 	<button class="btn-primary" id="new-comment-btn">Submit</button>
 </div>
-<div class="comments-list"></div>
