Now retrieving comments

--- a/app/html/comment.html
+++ b/app/html/comment.html
@@ -6,5 +6,5 @@
         </div>
         <div class="comment-date"><%- dateObj.day %> <%- dateObj.month %> <%- dateObj.year %></div>
     </div>
-    <div class="message"><%- message %></div>
+    <div class="message"><%- comment %></div>
 </div>
