--- a/app/html/newPost.html
+++ b/app/html/newPost.html
@@ -40,6 +40,6 @@
     </label>
   </div>
   <% } %>
-  <button type="button" class="btn btn-link cancel-button">Cancel</button>
+  <button type="button" class="btn btn-default">Cancel</button>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
