Updating header styling

--- a/app/html/header.html
+++ b/app/html/header.html
@@ -2,17 +2,10 @@
 	<img alt="User Profile Picture" width="50" src="assets/blank-avatar.png" />
 </div>
 <div class="user-options">
-    <div class="row">
-       <h1 class="col-lg-9">Joseph Hillhouse</h1>
-       <button id="new-post" class="col-lg-3 btn btn-primary"><span class="btn-icon new-post"></span>New Post</button>
-    </div>
-	
-	<div class="row filters">
+    <h1>Joseph Hillhouse</h1>
 
-		<button id="ask-doctor"><span class="btn-icon fa fa-user-md"></span>Ask a Doctor</button>
-		<button id="comments">
-		    <span class="comment-number">2</span>
-		    <span class="btn-icon fa fa-comment"></span>Comments
-		</button>
+    <div class="filters">
+   		<button id="new-post" class="sun-flower-button"><span class="btn-icon new-post"></span>New Post</button>
+		<button id="ask-doctor" class="clouds-flat-button"><span class="btn-icon fa fa-user-md"></span>Ask a Doctor</button>
 	</div>
 </div>
