--- a/app/html/newPost.html
+++ b/app/html/newPost.html
@@ -46,5 +46,5 @@
   </div>
   <% } %>
   <button type="button" class="btn btn-link cancel-button">Cancel</button>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="sun-flower-button">Submit</button>
 </form>
