Changing style for login button

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -19,7 +19,7 @@
                             <label for="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
-                        <button id="login-button" class="login-btn btn btn-primary">
+                        <button id="login-button" class="belize-hole-flat-button">
                             Log In
                         </button>
                     </form>
