--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -1,15 +1,13 @@
-<h1>Settings</h1>
 <form>
 	<label for="new-username">New username</label>
 	<input type="text" id="new-username" />
 	<fieldset>
-		<legend>Change your password</legend>
 		<label for="old-password">Old password</label>
-		<input type="text" id="old-password" />
+		<input type="text" id="old-password" class="form-control"/>
 		<label for="new-password">New password</label>
-		<input type="text" id="new-password" />
+		<input type="text" id="new-password" class="form-control"/>
 		<label for="confirm-password">Confirm password</label>
-		<input type="text" id="confirm-password" />
+		<input type="text" id="confirm-password" class="form-control"/>
 	</fieldset>
 	<button type="button" class="btn btn-default">Cancel</button>
 	<button type="button" class="btn btn-primary">Save</button>
