--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -9,6 +9,8 @@
 		<label for="confirm-password">Confirm password</label>
 		<input type="text" id="confirm-password" class="form-control"/>
 	</fieldset>
-	<button type="button" class="btn btn-default">Cancel</button>
-	<button type="button" class="btn btn-primary">Save</button>
+	<div class="form-group">
+		<button type="button" class="btn btn-default">Cancel</button>
+		<button type="button" class="btn btn-primary">Save</button>
+	</div>
 </form>
