--- a/app/html/navMenu.html
+++ b/app/html/navMenu.html
@@ -9,5 +9,5 @@
 	<li><a href="#">Feed Wall<span class="fa fa-globe pull-right"></span></a></li>
 	<li><a href="#favorites">Favorites<span class="fa fa-star pull-right"></span></a></li>
 	<li><a href="#">Profile<span class="fa fa-user pull-right"></span></a></li>
-	<li><a href="#">Settings<span class="fa fa-gear pull-right"></span></a></li>
+	<li><a href="#settings">Settings<span class="fa fa-gear pull-right"></span></a></li>
 </ul>
